--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇷🇺 俄罗斯联邦-280.5KB/s(Youtube:不良林), server: 213.183.53.177, port: 9003, type: ss, cipher: aes-256-cfb, password: JdmRK9gMEqFgs8nP}
-  - {name: 🇷🇺 俄罗斯联邦-348.2KB/s(Youtube:不良林), server: 213.183.53.182, port: 9084, type: ss, cipher: aes-256-cfb, password: c3NtHJ5ujV2tGDfj}
-  - {name: 🇷🇺 俄罗斯联邦-239.2KB/s(Youtube:不良林), server: 213.183.53.177, port: 9064, type: ss, cipher: aes-256-cfb, password: cp8pRSUAyLhTfVWH}
+  - {name: 🇺🇸 美国-1.00MB/s(Youtube:不良林), server: 38.68.135.18, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇨🇳 中国-1.50MB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
-  - {name: 🇷🇺 俄罗斯联邦-298.6KB/s(Youtube:不良林), server: 213.183.53.208, port: 9031, type: ss, cipher: aes-256-cfb, password: BwcAUZk8hUFAkDGN}
-  - {name: 🇳🇱 荷兰-303.2KB/s(Youtube:不良林), server: 37.120.192.158, port: 804, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇳🇱 荷兰-281.8KB/s(Youtube:不良林), server: 37.120.192.158, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 波兰-230.8KB/s(Youtube:不良林), server: 217.30.10.63, port: 9040, type: ss, cipher: aes-256-cfb, password: p9z5BVADH2YFs3MN}
-  - {name: 🇺🇸 美国-862.2KB/s(Youtube:不良林), server: 38.75.136.102, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
-  - {name: 🇦🇺 澳大利亚-455.4KB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-331.0KB/s(Youtube:不良林), server: relayjp3.vip.www.klrxyru.cn, port: 1453, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
+  - {name: 🇺🇸 美国-1.02MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 波兰-265.6KB/s(Youtube:不良林), server: 217.30.10.63, port: 9060, type: ss, cipher: aes-256-cfb, password: ueLXVkvh4hckhErQ}
+  - {name: 🇨🇳 中国-2.40MB/s(Youtube:不良林), server: relayjp2.vip.www.klrxyru.cn, port: 1452, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
+  - {name: 🇺🇸 美国-205.8KB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 保加利亚-237.5KB/s(Youtube:不良林), server: 213.183.63.217, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
+  - {name: 🇷🇺 俄罗斯联邦-847.3KB/s(Youtube:不良林), server: 213.183.53.208, port: 9031, type: ss, cipher: aes-256-cfb, password: BwcAUZk8hUFAkDGN}
+  - {name: 🇳🇱 荷兰-504.6KB/s(Youtube:不良林), server: 185.246.155.46, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-280.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-348.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-239.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.50MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-298.6KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-303.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-281.8KB/s(Youtube:不良林)
-      - 波兰-230.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-862.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-455.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-331.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.02MB/s(Youtube:不良林)
+      - 波兰-265.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-205.8KB/s(Youtube:不良林)
+      - 保加利亚-237.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-847.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-504.6KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇷🇺 俄罗斯联邦-280.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-348.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-239.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.50MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-298.6KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-303.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-281.8KB/s(Youtube:不良林)
-      - 波兰-230.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-862.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-455.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-331.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.02MB/s(Youtube:不良林)
+      - 波兰-265.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-205.8KB/s(Youtube:不良林)
+      - 保加利亚-237.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-847.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-504.6KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-280.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-348.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-239.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.50MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-298.6KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-303.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-281.8KB/s(Youtube:不良林)
-      - 波兰-230.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-862.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-455.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-331.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.02MB/s(Youtube:不良林)
+      - 波兰-265.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-205.8KB/s(Youtube:不良林)
+      - 保加利亚-237.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-847.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-504.6KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇷🇺 俄罗斯联邦-280.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-348.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-239.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.50MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-298.6KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-303.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-281.8KB/s(Youtube:不良林)
-      - 波兰-230.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-862.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-455.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-331.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.02MB/s(Youtube:不良林)
+      - 波兰-265.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-205.8KB/s(Youtube:不良林)
+      - 保加利亚-237.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-847.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-504.6KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-280.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-348.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-239.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.50MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-298.6KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-303.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-281.8KB/s(Youtube:不良林)
-      - 波兰-230.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-862.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-455.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-331.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.02MB/s(Youtube:不良林)
+      - 波兰-265.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-205.8KB/s(Youtube:不良林)
+      - 保加利亚-237.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-847.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-504.6KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-280.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-348.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-239.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.50MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-298.6KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-303.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-281.8KB/s(Youtube:不良林)
-      - 波兰-230.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-862.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-455.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-331.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.02MB/s(Youtube:不良林)
+      - 波兰-265.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-205.8KB/s(Youtube:不良林)
+      - 保加利亚-237.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-847.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-504.6KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-280.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-348.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-239.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.50MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-298.6KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-303.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-281.8KB/s(Youtube:不良林)
-      - 波兰-230.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-862.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-455.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-331.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.02MB/s(Youtube:不良林)
+      - 波兰-265.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-205.8KB/s(Youtube:不良林)
+      - 保加利亚-237.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-847.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-504.6KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
