--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-1.50MB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
-  - {name: 🇺🇸 美国-753.4KB/s(Youtube:不良林), server: 38.75.136.102, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇷🇺 俄罗斯联邦-314.6KB/s(Youtube:不良林), server: 213.183.53.182, port: 9084, type: ss, cipher: aes-256-cfb, password: c3NtHJ5ujV2tGDfj}
-  - {name: 🇷🇺 俄罗斯联邦-280.5KB/s(Youtube:不良林), server: 213.183.53.177, port: 9003, type: ss, cipher: aes-256-cfb, password: JdmRK9gMEqFgs8nP}
-  - {name: 🇨🇳 中国-2.60MB/s(Youtube:不良林), server: aiajp1.game.www.klrxyru.cn, port: 1460, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
-  - {name: 保加利亚-237.5KB/s(Youtube:不良林), server: 213.183.63.217, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
-  - {name: 🇷🇺 俄罗斯联邦-847.3KB/s(Youtube:不良林), server: 213.183.53.208, port: 9031, type: ss, cipher: aes-256-cfb, password: BwcAUZk8hUFAkDGN}
-  - {name: 🇳🇱 荷兰-504.6KB/s(Youtube:不良林), server: 185.246.155.46, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
+  - {name: 🇺🇸 美国-952.2KB/s(Youtube:不良林), server: 38.68.135.18, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇷🇺 俄罗斯联邦-876.5KB/s(Youtube:不良林), server: 213.183.53.177, port: 9018, type: ss, cipher: aes-256-cfb, password: fG2artUmHfNT2cX7}
+  - {name: 🇺🇸 美国-205.8KB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 卢森堡-6.93MB/s(Youtube:不良林), server: 91.243.81.248, port: 28000, type: trojan, password: f5f239fc-d21a-45ba-aeaf-b137d7d730a6, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-640.7KB/s(Youtube:不良林), server: 38.75.136.102, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
   - {name: 🇺🇸 美国-779.3KB/s(Youtube:不良林), server: v04.ssrsub.com, port: 153, type: vmess, uuid: 6f48efb9-3817-4652-832f-fd04d93ebbc1, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v04.ssrsub.com}}
   - {name: 🇺🇸 美国-393.1KB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇷🇺 俄罗斯联邦-442.1KB/s(Youtube:不良林), server: v001.v2dns.bar, port: 80, type: vmess, uuid: c97cf46e-1554-36cb-8b36-c3556b883dc4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /a11-dCeBnloadPy, ws-headers: {Host: v001.v2dns.bar}}
+  - {name: 🇨🇳 中国-490.9KB/s(Youtube:不良林), server: relayjp3.vip.www.klrxyru.cn, port: 1453, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
+  - {name: 🇨🇳 中国-1.79MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-753.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-314.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-280.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.60MB/s(Youtube:不良林)
-      - 保加利亚-237.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-847.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-504.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-952.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-876.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-205.8KB/s(Youtube:不良林)
+      - 卢森堡-6.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-640.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-779.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-393.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-442.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-490.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.79MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-1.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-753.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-314.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-280.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.60MB/s(Youtube:不良林)
-      - 保加利亚-237.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-847.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-504.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-952.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-876.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-205.8KB/s(Youtube:不良林)
+      - 卢森堡-6.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-640.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-779.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-393.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-442.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-490.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.79MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-753.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-314.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-280.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.60MB/s(Youtube:不良林)
-      - 保加利亚-237.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-847.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-504.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-952.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-876.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-205.8KB/s(Youtube:不良林)
+      - 卢森堡-6.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-640.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-779.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-393.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-442.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-490.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.79MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-1.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-753.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-314.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-280.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.60MB/s(Youtube:不良林)
-      - 保加利亚-237.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-847.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-504.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-952.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-876.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-205.8KB/s(Youtube:不良林)
+      - 卢森堡-6.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-640.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-779.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-393.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-442.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-490.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.79MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-753.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-314.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-280.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.60MB/s(Youtube:不良林)
-      - 保加利亚-237.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-847.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-504.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-952.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-876.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-205.8KB/s(Youtube:不良林)
+      - 卢森堡-6.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-640.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-779.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-393.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-442.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-490.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.79MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-753.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-314.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-280.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.60MB/s(Youtube:不良林)
-      - 保加利亚-237.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-847.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-504.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-952.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-876.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-205.8KB/s(Youtube:不良林)
+      - 卢森堡-6.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-640.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-779.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-393.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-442.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-490.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.79MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-753.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-314.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-280.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.60MB/s(Youtube:不良林)
-      - 保加利亚-237.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-847.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-504.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-952.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-876.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-205.8KB/s(Youtube:不良林)
+      - 卢森堡-6.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-640.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-779.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-393.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-442.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-490.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.79MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
