--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-490.9KB/s(Youtube:不良林), server: relayjp3.vip.www.klrxyru.cn, port: 1453, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
-  - {name: 🇳🇱 荷兰-504.6KB/s(Youtube:不良林), server: 185.246.155.46, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
-  - {name: 🇨🇳 中国-635.7KB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
-  - {name: 🇨🇳 中国-2.11MB/s(Youtube:不良林), server: shkr2.vip.www.klrxyru.cn, port: 1552, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: 8d83584393.wns.windows.com}
-  - {name: 🇷🇺 俄罗斯联邦-442.1KB/s(Youtube:不良林), server: v001.v2dns.bar, port: 80, type: vmess, uuid: c97cf46e-1554-36cb-8b36-c3556b883dc4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /a11-dCeBnloadPy, ws-headers: {Host: v001.v2dns.bar}}
-  - {name: 🇨🇳 中国-1.79MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-649.0KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇨🇳 中国-8.07MB/s(Youtube:不良林), server: 116.63.103.11, port: 45184, type: vmess, uuid: 20b48507-b52b-49bc-93b4-90ef114532fa, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 116.63.103.11}}
-  - {name: 捷克-343.1KB/s(Youtube:不良林), server: 195.133.53.192, port: 43688, type: vmess, uuid: bd1c8b57-0a9e-4e9f-a261-48e90c871e41, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 195.133.53.192}}
+  - {name: 🇨🇳 中国-635.7KB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
+  - {name: 🇨🇳 中国-2.10MB/s(Youtube:不良林), server: relayjp1.vip.www.klrxyru.cn, port: 1451, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
+  - {name: 🇨🇳 中国-3.13MB/s(Youtube:不良林), server: relayjp3.vip.www.klrxyru.cn, port: 1453, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
+  - {name: 🇨🇳 中国-440.8KB/s(Youtube:不良林), server: relayjp2.vip.www.klrxyru.cn, port: 1452, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
   - {name: 🇺🇸 美国-1.34MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.43MB/s(Youtube:不良林), server: v04.ssrsub.com, port: 153, type: vmess, uuid: ec3e47e9-8dd7-4302-aa1a-a5658d34e931, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v04.ssrsub.com}}
+  - {name: 🇨🇳 中国-469.1KB/s(Youtube:不良林), server: aiaus1.game.www.klrxyru.cn, port: 1420, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
+  - {name: 🇨🇳 中国-355.4KB/s(Youtube:不良林), server: aiasgp1.game.www.klrxyru.cn, port: 1520, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
+  - {name: 🇺🇸 美国-2.48MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-490.9KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-504.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-635.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.11MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-442.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.79MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-649.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-8.07MB/s(Youtube:不良林)
-      - 捷克-343.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-635.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-440.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-469.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-355.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-490.9KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-504.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-635.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.11MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-442.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.79MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-649.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-8.07MB/s(Youtube:不良林)
-      - 捷克-343.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-635.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-440.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-469.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-355.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-490.9KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-504.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-635.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.11MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-442.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.79MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-649.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-8.07MB/s(Youtube:不良林)
-      - 捷克-343.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-635.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-440.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-469.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-355.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-490.9KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-504.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-635.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.11MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-442.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.79MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-649.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-8.07MB/s(Youtube:不良林)
-      - 捷克-343.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-635.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-440.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-469.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-355.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-490.9KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-504.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-635.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.11MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-442.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.79MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-649.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-8.07MB/s(Youtube:不良林)
-      - 捷克-343.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-635.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-440.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-469.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-355.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-490.9KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-504.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-635.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.11MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-442.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.79MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-649.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-8.07MB/s(Youtube:不良林)
-      - 捷克-343.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-635.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-440.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-469.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-355.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-490.9KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-504.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-635.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.11MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-442.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.79MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-649.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-8.07MB/s(Youtube:不良林)
-      - 捷克-343.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-635.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-440.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-469.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-355.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
